feat(pagination): обновление существующих репозиториев, сервисов и контроллеров для поддержки пагинации